--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 	  "dev": "react-router dev",
 	  "typecheck": "react-router typegen && tsc --noEmit",
-	  "build": "vite build && mkdir -p dist && cp -R build/client/* dist/",
+	  "build": "vite build && rm -rf dist && mkdir -p dist && cp -R build/client/* dist/",
 	  "preview": "vite preview --port 4173"
 	},
 	"dependencies": {
