--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"scripts": {
 	  "dev": "react-router dev",
 	  "typecheck": "react-router typegen && tsc --noEmit",
-	  "build": "react-router build",
-	  "preview": "vite preview --port 4173"
+	  "build": "react-router build && rm -rf dist && mkdir -p dist && cp -R build/client/* ./dist/",
+	  "serve": "react-router serve dist --port 3000",
+	  "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+	  "test": "vitest"
 	},
 	"dependencies": {
 	  "@auth/core": "^0.37.2",
