--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,8 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": "build/client",
-    "rewrites": [
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
-  }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "cleanUrls": true,
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
